# practical-deep-learning-for-coders

./: .gitignore  README.md
learning-fastai/: multi-label-classification.ipynb
lesson1/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb  jupyter-notebook-101.ipynb  quiz.txt
lesson2/: quiz.txt  saving-a-basic-fastai-model.ipynb
lesson2/latte-art-classifier/: README.md  latte-art-classifier.ipynb
lesson2/pet-breed-classifier/: README.md  pet-breed-classifier-gradio.ipynb
lesson3/: 04_mnist_basics.ipynb  how-does-a-neural-net-really-work.ipynb  notes.md  quiz.md  which-image-models-are-best.ipynb
lesson4/: getting-started-with-nlp-for-absolute-beginners.ipynb  iterate-like-a-grandmaster.ipynb  notes.md
lesson5/: linear-model-and-neural-net-from-scratch.ipynb  notes.md  space-titanic-from-scratch-model.ipynb  spaceship-titanic-fastai.ipynb  why-you-should-use-a-framework.ipynb
lesson6/: how-random-forests-really-work.ipynb  notes.md  spaceship-titanic-random-forest.ipynb
lesson7/: collaborative-filtering-deep-dive.ipynb  first-steps-road-to-the-top-part-1.ipynb  multi-target-road-to-the-top-part-4.ipynb  notes.md  scaling-up-road-to-the-top-part-3.ipynb  small-models-road-to-the-top-part-2.ipynb
lesson8/: notes.md
local-setup/: setup-gpu-pytorch.md
local-setup/ming_jupyternb/: README.md  pyproject.toml
local-setup/ming_jupyternb/ming_jupyternb/: fastai_quickstart.ipynb  kickstart_pytorch.ipynb  verify_gpu.ipynb
